--- a/src/app/components/hobies/hobies.component.css
+++ b/src/app/components/hobies/hobies.component.css
@@ -5,7 +5,7 @@
            */
     
     body {
-        background: url(/assets/background-image.png) no-repeat center center fixed;
+        background: url(/assets/background.image.png) no-repeat center center fixed;
         background-size: cover;
         font-family: 'Archivo', sans-serif;
         background-repeat: no-repeat;
@@ -617,11 +617,12 @@
         .habilidades {
             width: 93%;
             height: 100%;
-            box-shadow: 0px 10px 10px rgba(56, 56, 56, 0.151);
+            box-shadow: 0px 3px 10px 3px rgb(0 0 0 / 80%) !important;
             border-radius: 10px;
             margin: 15% auto -40px auto;
             padding: 10px 0px 10px 0px;
             justify-content: center;
+            background: #1a1a1ad1;
         }
         .content-foto {
             display: inline-block;
@@ -705,12 +706,11 @@
         .title-company {
             display: block;
             font-size: 23px;
-            text-align: center;
-            color: rgb(7, 154, 199) !important;
+            text-align: center !important;
+            color: rgb(255 255 255) !important;
             margin: 15px 0 0 0!important;
             font-weight: 800;
             width: auto;
-            text-align: left;
         }
         .separador-info {
             color: rgb(49, 49, 49);
@@ -725,5 +725,15 @@
             align-items: center;
             padding: 0px;
             font-size: 13px;
+        }
+        #icon-sport {
+            background-image: url(/assets/running.png);
+            background-size: 100% 100%;
+            background-repeat: no-repeat;
+            background-position-x: center;
+            background-position-y: center;
+            height: 40px;
+            width: 40px !important;
+            border: none;
         }
     }
